Search button disabled functionality added

--- a/GCS/src/shared/components/header/header.component.html
+++ b/GCS/src/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <form (ngSubmit)= "OnclickSearch()" #f="ngForm" >
-  <input type="text" ngModel name="Queryparam" autocomplete="off">
-  <button>search</button>
+  <input type="text" ngModel name="Queryparam" autocomplete="off" required #Queryparam="ngModel">
+  <button [disabled]="!Queryparam.valid">search</button>
 </form>
 <div *ngIf="SearchResult">
   <div>
